--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -157,7 +157,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
+              <a class="dropdown-item d-flex align-items-center" href="{% url 'settings'%}">
                 <i class="bi bi-gear" style="color: #1a76d1;"></i>
                 <span>Account Settings</span>
               </a>
@@ -167,7 +167,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
+              <a class="dropdown-item d-flex align-items-center" href="{% url 'help_support'%}">
                 <i class="bi bi-question-circle" style="color: #1a76d1;"></i>
                 <span>Need Help?</span>
               </a>
