--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -187,7 +187,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="#">
+            <a class="nav-link collapsed" href="{% url 'settings'%}">
                 <i class="bi bi-gear" style="color: #1a76d1;"></i>
                 <span>System Settings</span>
             </a>
