--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -197,7 +197,7 @@
         <li class="nav-heading">Quick Actions</li>
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="#">
+            <a class="nav-link collapsed" href="{% url 'flight_announcement'%}">
                 <i class="bi bi-megaphone"></i>
                 <span>Flight Announcement</span>
             </a>
