--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -180,7 +180,7 @@
         <li class="nav-heading" style="color: #1a76d1;">System Administration</li>
 
         <li class="nav-item">
-            <a class="nav-link collapsed" href="#">
+            <a class="nav-link collapsed" href="{% url 'operations_reports'%}">
                 <i class="bi bi-file-earmark-bar-graph" style="color: #1a76d1;"></i>
                 <span>Operational Reports</span>
             </a>
