--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -123,7 +123,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'owner_payments_list'%}">
                         <i class="bi bi-wallet2"></i> Owner Payouts
                     </a>
                 </li>
