--- a/templates/index.html
+++ b/templates/index.html
@@ -166,7 +166,7 @@
             </li>
 
             <li>
-              <a href="{%  url 'aircraft_leasing'%}" class="navbar-link" data-nav-link>Aircraft Leasing</a>
+              <a href="{%  url 'aircraft_leasing'%}" class="navbar-link" data-nav-link>Aircraft Leasing & services</a>
             </li>
 
             <li>
