--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
   <link href="{% static 'assets/css/messages.css'%}" rel="stylesheet">
   <script src="{% static 'assets/js/messages.js'%}"></script>
+  <script src="{% static 'assets/js/airport_autocomplete.js'%}"></script>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
