--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -71,7 +71,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'aircraft_tracking'%}">
                         <i class="bi bi-geo-alt"></i> Live Tracking
                     </a>
                 </li>
