--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,7 @@
 
   <link href="{% static 'assets/css/messages.css'%}" rel="stylesheet">
   <script src="{% static 'assets/js/messages.js'%}"></script>
+  <script src="{% static 'assets/js/time-picker.js' %}"></script>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
