--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
   <link href="{% static 'assets/css/messages.css'%}" rel="stylesheet">
   <script src="{% static 'assets/js/messages.js'%}"></script>
   <script src="{% static 'assets/js/airport_autocomplete.js'%}"></script>
+  <script src="{% static 'assets/js/time-picker.js' %}"></script>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
